# art_hug_11

./: .env.example  .gitignore  MIGRATION_SUMMARY.md  README.md  Taskfile.yml  VISUALIZATION_MIGRATION_SUMMARY.md  ch_11_project.yaml  custom_tokenizer.json  project.yaml  pyproject.toml
docs/: article11.md  article11i.md  briefing.md  code_listings.md  faq.md  study_guide.md
notebooks/: building_custom_language_models.ipynb  custom_tokenizer.json  medical_tokenizer.json  tutorial.ipynb
notebooks/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
src/: __init__.py  chain_of_thought.py  config.py  constitutional_ai.py  data_curation.py  few_shot_learning.py  main.py  model_configuration.py  prompt_engineering.py  tokenization.py  training_workflow.py
tests/: test_examples.py
